// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <Table
    disableStripes={false}
    paddingStyle="none"
  >
    <table
      className="table striped orion-fusion-theme"
    >
      <TableHeader>
        <thead>
          <tr>
            <TableHeaderCell
              key="NAME"
            >
              <th>
                Name
              </th>
            </TableHeaderCell>
            <TableHeaderCell
              key="ADDRESS"
            >
              <th>
                Address
              </th>
            </TableHeaderCell>
            <TableHeaderCell
              key="PHONE_NUMBER"
            >
              <th>
                Phone Number
              </th>
            </TableHeaderCell>
          </tr>
        </thead>
      </TableHeader>
      <TableBody>
        <tbody>
          <TableRow
            key="PERSON_0"
          >
            <tr
              className="row"
            >
              <TableCell
                key="NAME"
              >
                <td>
                  John Smith
                </td>
              </TableCell>
              <TableCell
                key="ADDRESS"
              >
                <td>
                  123 Adams Drive
                </td>
              </TableCell>
              <TableCell
                key="PHONE_NUMBER"
              >
                <td>
                  111-222-3333
                </td>
              </TableCell>
            </tr>
          </TableRow>
          <TableRow
            key="PERSON_1"
          >
            <tr
              className="row"
            >
              <TableCell
                key="NAME"
              >
                <td>
                  John Smith
                </td>
              </TableCell>
              <TableCell
                key="ADDRESS"
              >
                <td>
                  123 Adams Drive
                </td>
              </TableCell>
              <TableCell
                key="PHONE_NUMBER"
              >
                <td>
                  111-222-3333
                </td>
              </TableCell>
            </tr>
          </TableRow>
        </tbody>
      </TableBody>
    </table>
  </Table>
</ThemeContextProvider>
`;

exports[`should render a default table 1`] = `
<table
  className="table striped"
>
  <TableHeader>
    <TableHeaderCell
      key="NAME"
    >
      Name
    </TableHeaderCell>
    <TableHeaderCell
      key="ADDRESS"
    >
      Address
    </TableHeaderCell>
    <TableHeaderCell
      key="PHONE_NUMBER"
    >
      Phone Number
    </TableHeaderCell>
  </TableHeader>
  <TableBody>
    <TableRow
      key="PERSON_0"
    >
      <TableCell
        key="NAME"
      >
        John Smith
      </TableCell>
      <TableCell
        key="ADDRESS"
      >
        123 Adams Drive
      </TableCell>
      <TableCell
        key="PHONE_NUMBER"
      >
        111-222-3333
      </TableCell>
    </TableRow>
    <TableRow
      key="PERSON_1"
    >
      <TableCell
        key="NAME"
      >
        John Smith
      </TableCell>
      <TableCell
        key="ADDRESS"
      >
        123 Adams Drive
      </TableCell>
      <TableCell
        key="PHONE_NUMBER"
      >
        111-222-3333
      </TableCell>
    </TableRow>
  </TableBody>
</table>
`;

exports[`should render a table with compact padding 1`] = `
<table
  className="table striped padding-compact"
>
  <TableHeader>
    <TableHeaderCell
      key="NAME"
    >
      Name
    </TableHeaderCell>
    <TableHeaderCell
      key="ADDRESS"
    >
      Address
    </TableHeaderCell>
    <TableHeaderCell
      key="PHONE_NUMBER"
    >
      Phone Number
    </TableHeaderCell>
  </TableHeader>
  <TableBody>
    <TableRow
      key="PERSON_0"
    >
      <TableCell
        key="NAME"
      >
        John Smith
      </TableCell>
      <TableCell
        key="ADDRESS"
      >
        123 Adams Drive
      </TableCell>
      <TableCell
        key="PHONE_NUMBER"
      >
        111-222-3333
      </TableCell>
    </TableRow>
    <TableRow
      key="PERSON_1"
    >
      <TableCell
        key="NAME"
      >
        John Smith
      </TableCell>
      <TableCell
        key="ADDRESS"
      >
        123 Adams Drive
      </TableCell>
      <TableCell
        key="PHONE_NUMBER"
      >
        111-222-3333
      </TableCell>
    </TableRow>
  </TableBody>
</table>
`;

exports[`should render a table with standard padding 1`] = `
<table
  className="table striped padding-standard"
>
  <TableHeader>
    <TableHeaderCell
      key="NAME"
    >
      Name
    </TableHeaderCell>
    <TableHeaderCell
      key="ADDRESS"
    >
      Address
    </TableHeaderCell>
    <TableHeaderCell
      key="PHONE_NUMBER"
    >
      Phone Number
    </TableHeaderCell>
  </TableHeader>
  <TableBody>
    <TableRow
      key="PERSON_0"
    >
      <TableCell
        key="NAME"
      >
        John Smith
      </TableCell>
      <TableCell
        key="ADDRESS"
      >
        123 Adams Drive
      </TableCell>
      <TableCell
        key="PHONE_NUMBER"
      >
        111-222-3333
      </TableCell>
    </TableRow>
    <TableRow
      key="PERSON_1"
    >
      <TableCell
        key="NAME"
      >
        John Smith
      </TableCell>
      <TableCell
        key="ADDRESS"
      >
        123 Adams Drive
      </TableCell>
      <TableCell
        key="PHONE_NUMBER"
      >
        111-222-3333
      </TableCell>
    </TableRow>
  </TableBody>
</table>
`;

exports[`should render a table without padding 1`] = `
<table
  className="table striped"
>
  <TableHeader>
    <TableHeaderCell
      key="NAME"
    >
      Name
    </TableHeaderCell>
    <TableHeaderCell
      key="ADDRESS"
    >
      Address
    </TableHeaderCell>
    <TableHeaderCell
      key="PHONE_NUMBER"
    >
      Phone Number
    </TableHeaderCell>
  </TableHeader>
  <TableBody>
    <TableRow
      key="PERSON_0"
    >
      <TableCell
        key="NAME"
      >
        John Smith
      </TableCell>
      <TableCell
        key="ADDRESS"
      >
        123 Adams Drive
      </TableCell>
      <TableCell
        key="PHONE_NUMBER"
      >
        111-222-3333
      </TableCell>
    </TableRow>
    <TableRow
      key="PERSON_1"
    >
      <TableCell
        key="NAME"
      >
        John Smith
      </TableCell>
      <TableCell
        key="ADDRESS"
      >
        123 Adams Drive
      </TableCell>
      <TableCell
        key="PHONE_NUMBER"
      >
        111-222-3333
      </TableCell>
    </TableRow>
  </TableBody>
</table>
`;

exports[`should render a table without zebra stripes 1`] = `
<table
  className="table"
>
  <TableHeader>
    <TableHeaderCell
      key="NAME"
    >
      Name
    </TableHeaderCell>
    <TableHeaderCell
      key="ADDRESS"
    >
      Address
    </TableHeaderCell>
    <TableHeaderCell
      key="PHONE_NUMBER"
    >
      Phone Number
    </TableHeaderCell>
  </TableHeader>
  <TableBody>
    <TableRow
      key="PERSON_0"
    >
      <TableCell
        key="NAME"
      >
        John Smith
      </TableCell>
      <TableCell
        key="ADDRESS"
      >
        123 Adams Drive
      </TableCell>
      <TableCell
        key="PHONE_NUMBER"
      >
        111-222-3333
      </TableCell>
    </TableRow>
    <TableRow
      key="PERSON_1"
    >
      <TableCell
        key="NAME"
      >
        John Smith
      </TableCell>
      <TableCell
        key="ADDRESS"
      >
        123 Adams Drive
      </TableCell>
      <TableCell
        key="PHONE_NUMBER"
      >
        111-222-3333
      </TableCell>
    </TableRow>
  </TableBody>
</table>
`;
